--- a/Shopify.ipynb
+++ b/Shopify.ipynb
@@ -25,7 +25,7 @@
     "import numpy as np\n",
     "import statistics as st \n",
     "\n",
-    "df = pd.read_excel (r'/Users/zakiehnabavi/Downloads/data.xlsx')\n",
+    "df = pd.read_excel (r'data.xlsx')\n",
     "\n",
     "plt.boxplot(df['order_amount'])\n",
     "plt.show()\n",
